v1.12.x-snapshot
===========
Bug fixes:
- #6753 Fixed a number of vulnerabilities detected by static analysis
- #6755 Fixed Vulnerability in vreadf function detected by Static analysis
- #6758 Account name with space on windows causes synergy to error when starting
- #6760 Synergy loses license when creating a System scope config

Enhancements:
- #6750 Integrate SonarCloud for static analysis and test coverage

v1.12.0-stable
===========

Bug fixes:
- #6748 Copyright year in about dialog isn't updated

v1.12.0-rc2
===========

Bug fixes:
- #6730 Updating synergy looses settings
- #6734 Fixed naming of installers for linux and windows
- #6743 Azure build git revision showing as 0badc0de

Enhancements:
- #6739 Add submodules cloning to cmake
- #6736 Command line option for custom TLS Certificate

v1.12.0-rc1
===========

Bug fixes:
- #6487 Mouse freezes or key repeats on Linux client
- #6663 Limit GUI log Window to prevent it using up too much RAM over time
- #6587 Auto config setting doesn't do anything
- #6620 Unit tests are no longer built
- #6670 Build computers failing with language file error
- #6661 Removed deprecated namespace in gtest/gmock by updating
- #6601 Update man page with missing crypto option
- #4036 Client cursor constrained to old resolution
- #6716 Denial of Service vulnerability on servers with 4GB of ram or less

Enhancements:
- #6666 Add doxygen documentation output from pipelines
- #6674 Debian 10 X11 build for CI
- #6714 Added windows core binaries upload to sandor
- #6715 Updated language file from Crowdin
- #6688 Fully migrate CI from Jenkins to Azure Pipelines
- #6718 GitHub Action to test PR's for if ChangeLog was updated
- #6722 Allow servers to be announced by screen name instead of IP
- #6720 Add macqtdeploy to cmake
- #6725 Disable the building of tests with CMake option

Features:
- #6538 System-wide config for all system users

v1.11.1-stable
===========

Bug fixes:

- #6622 Language files not updated during build